Fri Jan  1 00:12:52 2010  Akinori MUSHA  <knu@iDaemons.org>

	* object.c, intern.h: Export rb_sym_to_s.

Thu Dec 31 23:41:48 2009  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c: Remove a duplicated declaration.

Thu Dec 31 18:16:51 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c: include addrinfo.h only when using our own
	  getaddrinfo.c.

Thu Dec 31 05:56:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/extconf.rb: fix for wide-getaddrinfo option.

	* ext/socket/addrinfo.c: rename {addr,name}info functions to ensure
	  those are used on darwin.

Thu Dec 31 01:58:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: fix for extstatic.

Tue Dec 29 11:20:41 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate.rb (marshal_dump/load): Revert r26122, r26194, as per
	  Nobu. [ruby-core:24211]

Tue Dec 29 10:36:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser::STANDALONE):
	  any number spaces can be placed between equal-sign and the value.
	  patch from Ed Howland in [ruby-core:27345].

Mon Dec 28 22:01:58 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/ruby/test_marshal.rb: added tests for taintness propagation.

Thu Dec 24 12:08:00 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate.rb (marshal_dump/load): dump & load instance variables
	  by default [ruby-core:24211]

Wed Dec 23 20:48:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (args): splat other than direct array literal.
	  [ruby-dev:39771]

Wed Dec 23 17:23:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_load): initialize orig_func.   [ruby-core:27296]

Tue Dec 22 10:59:56 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/net/http/test_post_io.rb: parse chunked stream to avoid client
	  side connection error raised.

Mon Dec 21 15:27:48 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
